--- a/other/draft.ipynb
+++ b/other/draft.ipynb
@@ -1001,14 +1001,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('549.69', '-47.75', '(-7.99%)')\n"
+      "('0.4900', '0.0000', '(0.00%)')\n"
      ]
     }
    ],
@@ -1039,7 +1039,7 @@
     "\n",
     "# Example usage\n",
     "\n",
-    "option_data = fetch_option_data('SPXW240502C04500000')\n",
+    "option_data = fetch_option_data('ADBE240719P00415000')\n",
     "if option_data:\n",
     "    print(option_data)\n"
    ]
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrealPrice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrealStock\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_realtime_stock_price\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrealPrice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrealOption\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main \u001b[38;5;28;01mas\u001b[39;00m get_realtime_option_price\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_historical_data\u001b[39m(ticker, start_date):\n",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrealPrice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrealStock\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_realtime_stock_price\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrealPrice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrealOption\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main \u001b[38;5;28;01mas\u001b[39;00m get_realtime_option_price\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_historical_data\u001b[39m(ticker, start_date):\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'realPrice'"
      ]
     }
@@ -1783,6 +1783,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yfinance as yf\n",
+    "def calls_and_puts(company='SPX', date='2024-05-02', strike=4500):\n",
+    "    ticker = yf.Ticker(company)\n",
+    "    option_chain = ticker.option_chain(date)\n",
+    "  \n",
+    "    \n",
+    "    calls = option_chain.calls\n",
+    "    puts = option_chain.puts\n",
+    "    call_data = calls[calls['strike'] == strike]\n",
+    "    put_data = puts[puts['strike'] == strike]\n",
+    "    options = []\n",
+    "    call_symbol = call_data['contractSymbol'].values[0]\n",
+    "    options.append(call_symbol)\n",
+    "    put_symbol = put_data['contractSymbol'].values[0]\n",
+    "    options.append(put_symbol)  \n",
+    "calls_and_puts('^SPX', '2024-07-19', 4500)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No results found in the data.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_historical_data(ticker, start_date):\n",
+    "    api_key = 'C6ig1sXku2yKl_XEIvSvc_OWCwB8ILLn'\n",
+    "    base_url = 'https://api.polygon.io/v2/aggs/ticker/'\n",
+    "    end_date = datetime.now()  \n",
+    "\n",
+    "    ticker = f'O:{ticker}'\n",
+    "    if isinstance(start_date, datetime):\n",
+    "        start_date = start_date.strftime('%Y-%m-%d')\n",
+    "\n",
+    "    url = f\"{base_url}{ticker}/range/1/day/{start_date}/{end_date.strftime('%Y-%m-%d')}?apiKey={api_key}\"\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        if 'results' in data:\n",
+    "            df = pd.DataFrame(data['results'])\n",
+    "            df['t'] = pd.to_datetime(df['t'], unit='ms')\n",
+    "            df['date'] = df['t'].dt.date  \n",
+    "            return df[['date','c',]]\n",
+    "        else:\n",
+    "            print(\"No results found in the data.\")\n",
+    "            return pd.DataFrame()  \n",
+    "    else:\n",
+    "        print(f\"Failed to retrieve data: {response.status_code}\")\n",
+    "        return None\n",
+    "get_historical_data('ADBE240719C00355000', '2024-06-24')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1805,7 +1909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.-1"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
