Update pnl index for missing days and daily pnl-> current pnl corrections

--- a/other/draft.ipynb
+++ b/other/draft.ipynb
@@ -2235,6 +2235,348 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current price of SPY is 556.94, the price change is -7.92, the percent change is -1.40%\n",
+      "          date  call_close_price  put_close_price  stock_close_price\n",
+      "0   2024-07-01               NaN              NaN             545.34\n",
+      "1   2024-07-02            833.15             3.40             549.01\n",
+      "2   2024-07-03            857.73             3.20             551.46\n",
+      "3   2024-07-05            857.73             3.20             554.64\n",
+      "4   2024-07-08            898.00             2.54             555.28\n",
+      "5   2024-07-09            898.00             2.54             555.82\n",
+      "6   2024-07-10            937.63             2.45             561.32\n",
+      "7   2024-07-11            937.63             2.45             556.48\n",
+      "8   2024-07-12            958.08             2.07             559.99\n",
+      "9   2024-07-15            958.08             2.07             561.53\n",
+      "10  2024-07-16            958.08             2.07             564.86\n",
+      "11  2024-07-17            958.08             2.07             556.94\n",
+      "12  2024-07-18            958.08             2.84             556.94\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>call_close_price</th>\n",
+       "      <th>put_close_price</th>\n",
+       "      <th>stock_close_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>545.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-07-02</td>\n",
+       "      <td>833.15</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>549.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>857.73</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>551.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-07-05</td>\n",
+       "      <td>857.73</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>554.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-07-08</td>\n",
+       "      <td>898.00</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>555.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-07-09</td>\n",
+       "      <td>898.00</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>555.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>937.63</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>561.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-07-11</td>\n",
+       "      <td>937.63</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>556.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024-07-12</td>\n",
+       "      <td>958.08</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>559.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024-07-15</td>\n",
+       "      <td>958.08</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>561.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024-07-16</td>\n",
+       "      <td>958.08</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>564.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024-07-17</td>\n",
+       "      <td>958.08</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>556.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024-07-18</td>\n",
+       "      <td>958.08</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>556.94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date  call_close_price  put_close_price  stock_close_price\n",
+       "0   2024-07-01               NaN              NaN             545.34\n",
+       "1   2024-07-02            833.15             3.40             549.01\n",
+       "2   2024-07-03            857.73             3.20             551.46\n",
+       "3   2024-07-05            857.73             3.20             554.64\n",
+       "4   2024-07-08            898.00             2.54             555.28\n",
+       "5   2024-07-09            898.00             2.54             555.82\n",
+       "6   2024-07-10            937.63             2.45             561.32\n",
+       "7   2024-07-11            937.63             2.45             556.48\n",
+       "8   2024-07-12            958.08             2.07             559.99\n",
+       "9   2024-07-15            958.08             2.07             561.53\n",
+       "10  2024-07-16            958.08             2.07             564.86\n",
+       "11  2024-07-17            958.08             2.07             556.94\n",
+       "12  2024-07-18            958.08             2.84             556.94"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "project_dir = '/Users/julienne_hu/Desktop/Option_Apps'\n",
+    "sys.path.append(project_dir)\n",
+    "\n",
+    "import yfinance as yf\n",
+    "from realPrice.realStock import get_realtime_stock_price\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import holidays\n",
+    "\n",
+    "\n",
+    "def get_option_chain(company='SPX', date='2024-05-02', strike=4500):\n",
+    "    ticker = yf.Ticker(company)\n",
+    "    option_chain = ticker.option_chain(date)\n",
+    "   \n",
+    "    call_data = option_chain.calls[option_chain.calls['strike'] == strike]\n",
+    "    \n",
+    "    if not call_data.empty:\n",
+    "        call_symbol = call_data['contractSymbol'].values[0]\n",
+    "        call_symbol = call_symbol[:next((i for i, char in enumerate(call_symbol) if char.isdigit()), None)]\n",
+    "        return call_symbol\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "def get_historical_data(ticker, start_date):\n",
+    "    api_key = 'C6ig1sXku2yKl_XEIvSvc_OWCwB8ILLn'\n",
+    "    base_url = 'https://api.polygon.io/v2/aggs/ticker/'\n",
+    "    end_date = datetime.now()  \n",
+    "\n",
+    "    ticker = f'O:{ticker}'\n",
+    "    if isinstance(start_date, datetime):\n",
+    "        start_date = start_date.strftime('%Y-%m-%d')\n",
+    "\n",
+    "    url = f\"{base_url}{ticker}/range/1/day/{start_date}/{end_date.strftime('%Y-%m-%d')}?apiKey={api_key}\"\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        if 'results' in data:\n",
+    "            df = pd.DataFrame(data['results'])\n",
+    "            df['t'] = pd.to_datetime(df['t'], unit='ms')\n",
+    "            df['date'] = df['t'].dt.date  \n",
+    "            return df[['date','c',]]\n",
+    "        else:\n",
+    "            print(\"No results found in the data.\")\n",
+    "            return pd.DataFrame()  \n",
+    "    else:\n",
+    "        print(f\"Failed to retrieve data: {response.status_code}\")\n",
+    "        return None\n",
+    "\n",
+    "def get_stock_price(symbol, start_date, end_date):\n",
+    "    stock = yf.Ticker(symbol)\n",
+    "    hist = stock.history(start=start_date, end=end_date)\n",
+    "    hist.reset_index(inplace=True)\n",
+    "    hist['date'] = hist['Date'].dt.date\n",
+    "    hist.rename(columns={'Close': 'stock_close_price'}, inplace=True)\n",
+    "    hist['stock_close_price'] = hist['stock_close_price'].round(2)\n",
+    "    return hist[['date', 'stock_close_price']]\n",
+    "\n",
+    "def calls_and_puts(company='SPX', date='2024-05-02', strike=4500):\n",
+    "    ticker = yf.Ticker(company)\n",
+    "    option_chain = ticker.option_chain(date)\n",
+    "  \n",
+    "    \n",
+    "    calls = option_chain.calls\n",
+    "    puts = option_chain.puts\n",
+    "    call_data = calls[calls['strike'] == strike]\n",
+    "    put_data = puts[puts['strike'] == strike]\n",
+    "    options = []\n",
+    "    call_symbol = call_data['contractSymbol'].values[0]\n",
+    "    options.append(call_symbol)\n",
+    "    put_symbol = put_data['contractSymbol'].values[0]\n",
+    "    options.append(put_symbol) \n",
+    "    return options \n",
+    "    \n",
+    "def main(company='^SPX', date='2024-08-16', strike=4700, trade_date='2024-07-01'):\n",
+    "    # Fetch ticker information\n",
+    "    ticker = yf.Ticker(company)\n",
+    "    option_chain = ticker.option_chain(date)\n",
+    "  \n",
+    "    \n",
+    "    calls = option_chain.calls\n",
+    "    puts = option_chain.puts\n",
+    "    call_data = calls[calls['strike'] == strike]\n",
+    "    put_data = puts[puts['strike'] == strike]\n",
+    "\n",
+    "    if call_data.empty and put_data.empty:\n",
+    "        print(\"No call or put options available for the specified strike price.\")\n",
+    "        return None\n",
+    "    \n",
+    "    options = []\n",
+    "    realPrices = []\n",
+    "    \n",
+    "    if not call_data.empty:\n",
+    "        call_symbol = call_data['contractSymbol'].values[0]\n",
+    "        options.append(call_symbol)\n",
+    "        call_price = call_data['lastPrice'].values[0]\n",
+    "        realPrices.append(call_price)\n",
+    "    \n",
+    "    if not put_data.empty:\n",
+    "        put_symbol = put_data['contractSymbol'].values[0]\n",
+    "        options.append(put_symbol)\n",
+    "        put_price = put_data['lastPrice'].values[0]\n",
+    "        realPrices.append(put_price)\n",
+    "\n",
+    "    # Get historical data for the options\n",
+    "    data_frames = []\n",
+    "    for i, option in enumerate(options):\n",
+    "        price_data = get_historical_data(option, trade_date)\n",
+    "        time.sleep(1)\n",
+    "        if price_data is not None:\n",
+    "            if i == 0:\n",
+    "                price_data.rename(columns={'c': 'call_close_price'}, inplace=True)\n",
+    "            else:    \n",
+    "                price_data.rename(columns={'c': 'put_close_price'}, inplace=True)\n",
+    "            data_frames.append(price_data)\n",
+    "        else:\n",
+    "            print(f\"Failed to retrieve data for option: {option}\")\n",
+    "    \n",
+    "    # Merge the dataframes\n",
+    "    if len(data_frames) == 2:\n",
+    "        df = pd.merge(data_frames[0], data_frames[1], on='date')\n",
+    "        df['date'] = pd.to_datetime(df['date'])\n",
+    "        df = df.sort_values(by='date')\n",
+    "        \n",
+    "        today = datetime.now().date()-timedelta(days=1)\n",
+    "        us_holidays = holidays.US(years=[2024])\n",
+    "        allday = pd.date_range(trade_date, today).strftime('%Y-%m-%d')\n",
+    "        allday = [day for day in allday if pd.to_datetime(day).weekday() < 5 and day not in us_holidays ]\n",
+    "\n",
+    "        # add dates that are not in the df but in the allday list\n",
+    "        missing_dates = [day for day in allday if day not in df['date'].dt.strftime('%Y-%m-%d').values]\n",
+    "        missing_df = pd.DataFrame(missing_dates, columns=['date'])\n",
+    "        missing_df['date'] = pd.to_datetime(missing_df['date'])\n",
+    "        missing_df['call_close_price'] = np.nan\n",
+    "        missing_df['put_close_price'] = np.nan\n",
+    "        df = pd.concat([df, missing_df], ignore_index=True)\n",
+    "        df = df.sort_values(by='date')\n",
+    "        \n",
+    "        # Get the stock price data\n",
+    "        start_date = datetime.strptime(trade_date, '%Y-%m-%d')\n",
+    "        end_date = datetime.now()\n",
+    "        stock_prices = get_stock_price('SPY', start_date.strftime('%Y-%m-%d'), end_date.strftime('%Y-%m-%d'))\n",
+    "        stock_prices['date'] = pd.to_datetime(stock_prices['date'])\n",
+    "        df = pd.merge(df, stock_prices, on='date', how='left')\n",
+    "        df['date'] = df['date'].dt.date\n",
+    "            \n",
+    "        # add real time stock price, call price as realPrices[0], put price as realPrices[1]\n",
+    "        current_price = get_realtime_stock_price('SPY')[0]\n",
+    "        call_price = realPrices[0]\n",
+    "        put_price = realPrices[1]\n",
+    "        \n",
+    "        df.loc[len(df)] = [datetime.now().date(), call_price, put_price, current_price]\n",
+    "        df = df.fillna(method='ffill')\n",
+    "        # round the stock price to two digits\n",
+    "        df['stock_close_price'] = df['stock_close_price'].round(2)\n",
+    "        return df\n",
+    "    else:\n",
+    "        print(\"Could not retrieve data for one or more options.\")\n",
+    "        return None\n",
+    "    \n",
+    "main()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
