fix index errors

--- a/other/draft.ipynb
+++ b/other/draft.ipynb
@@ -613,6 +613,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1535.3, 1642.9, 1677.8)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getIndexOption(symbol, ticker):\n",
+    "    info = yf.Ticker(symbol)\n",
+    "    option_syb = ticker[:next((i for i, char in enumerate(ticker) if char.isdigit()), None)]\n",
+    "    length = len(option_syb)\n",
+    "    date = ticker[length:length + 6]\n",
+    "    option_date = f\"20{date[:2]}-{date[2:4]}-{date[4:]}\"\n",
+    "    opt = info.option_chain(option_date)\n",
+    "    optionType = ticker[length + 6]\n",
+    "    if optionType.upper() == \"C\":\n",
+    "        calls = opt.calls\n",
+    "        res = calls[calls['contractSymbol'] == ticker]\n",
+    "    else:\n",
+    "        puts = opt.puts\n",
+    "        res = puts[puts['contractSymbol'] == ticker]\n",
+    "    \n",
+    "    last = res['lastPrice'].values[0]\n",
+    "    bid = res['bid'].values[0]\n",
+    "    ask = res['ask'].values[0]\n",
+    "    return last, bid, ask\n",
+    "getIndexOption('^NDX', 'NDXP240722C18200000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1087.4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "ticker = yf.Ticker('^SPX')\n",
+    "ticker.history(period='1d')\n",
+    "ticker.option_chain('2024-08-16')\n",
+    "\n",
+    "opt = ticker.option_chain('2024-08-16')\n",
+    "calls = opt.calls\n",
+    "puts = opt.puts\n",
+    "\n",
+    "# get contract symbol 'SPX240816C04500000\n",
+    "calls[calls['contractSymbol'] == 'SPX240816C04500000']['ask'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
