--- a/other/draft.ipynb
+++ b/other/draft.ipynb
@@ -2646,6 +2646,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('2.718281828459045235360287471')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import decimal\n",
+    "\n",
+    "decimal.Decimal('1').exp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.718281828459045090795598298427648842334747314453125\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mpmath import *\n",
+    "import math\n",
+    "\n",
+    "mp.dps = 64; mp.pretty = True\n",
+    "\n",
+    "# Value from mpmath\n",
+    "e1 = mpmathify(math.exp(1))\n",
+    "\n",
+    "# Value from wolframalpha.com\n",
+    "e2 = 2.7182818284590452353602874713526624977572470936999595749669676277\n",
+    "# Error\n",
+    "print(e1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('2.141592653589793238462643383279502884197')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "math_Pi = math.pi\n",
+    "wa_Pi = 3.1415926535897932384626433832795028841971693993751058209749445923"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00000000000000012246467991473531772014792699320386414420353931996486690470492265"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mpmath import *\n",
+    "mp.dps = 65\n",
+    "mp_Pi = pi() \n",
+    "fsub(mp_Pi, wa_Pi, prec=65)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('0.0000000000000001')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'zeros' from 'scipy' (/opt/homebrew/lib/python3.11/site-packages/scipy/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m zeros\n\u001b[1;32m      3\u001b[0m zero_vector \u001b[38;5;241m=\u001b[39m zeros(\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(zero_vector)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'zeros' from 'scipy' (/opt/homebrew/lib/python3.11/site-packages/scipy/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import zeros\n",
+    "\n",
+    "zero_vector = zeros(10)\n",
+    "\n",
+    "print(zero_vector)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "print(scipy.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2668,7 +2836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
